macro/src/snapshots/adze_macro__tests__grammar_unboxed_field.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct Language { e: Expression, } pub enum\n        Expression\n        {\n            Number(#[adze::leaf(pattern = r\"\\d+\", transform = |v: &str|\n            v.parse::<i32>().unwrap())] i32),\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Language {
        e: Expression,
    }
    impl ::adze::Extract<Language> for Language {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Language {
                e: {
                    ::adze::__private::extract_field::<Expression, _>(
                        cursor, source, last_idx, "e", None,
                    )
                },
            })
        }
    }
    pub enum Expression {
        Number(i32),
    }
    impl ::adze::Extract<Expression> for Expression {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for enum");
            fn unwrap_hidden_rules(node: ::adze::tree_sitter::Node) -> ::adze::tree_sitter::Node {
                let mut cursor = node.walk();
                let non_extra_children: Vec<_> = node
                    .children(&mut cursor)
                    .filter(|c| !c.is_extra())
                    .collect();
                if (node.kind().starts_with('_') || non_extra_children.len() == 1)
                    && !non_extra_children.is_empty()
                {
                    if let Some(child) = non_extra_children.first() {
                        return unwrap_hidden_rules(*child);
                    }
                }
                node
            }
            let unwrapped_node = unwrap_hidden_rules(node);
            let mut cursor = unwrapped_node.walk();
            let non_extra_children: Vec<_> = unwrapped_node
                .children(&mut cursor)
                .filter(|c| !c.is_extra())
                .collect();
            if unwrapped_node.kind() == stringify!(Expression) && non_extra_children.len() == 1 {
                let child = non_extra_children[0];
                return Self::extract(Some(child), source, _last_idx, _leaf_fn);
            }
            let child_node = unwrapped_node;
            if child_node.kind() == "Expression_Number" {
                return ::adze::__private::extract_struct_or_variant(
                    node,
                    move |cursor, last_idx| {
                        Expression::Number({
                            ::adze::__private::extract_field::<i32, _>(
                                cursor, source, last_idx, "0", None,
                            )
                        })
                    },
                );
            }
            panic ! ("Could not determine enum variant from tree structure: node kind='{}', child_count={}" , unwrapped_node . kind () , unwrapped_node . child_count ())
        }
    }
    unsafe extern "C" {
        fn tree_sitter_test() -> ::adze::tree_sitter::Language;
    }
    pub fn language() -> ::adze::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Language`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<Language, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<Language>(input, language)
    }
}
